--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon --watch src --watch routes --watch views --ext ts,js,hbs --exec ts-node ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -15,6 +16,10 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-dev": "^8.0.0",
+    "node-fetch": "^3.3.2",
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
